# ClaudePortal

./: .gitignore  README.md
agent/: .env.example  README.md  pyproject.toml  requirements.txt
agent/claude_portal/: __init__.py  __main__.py  aggregator.py  models.py  parser.py  publisher.py
agent/deploy/: README.md  claude-portal-agent.service  com.claudeportal.agent.plist
agent/tests/: test_aggregator.py  test_parser.py  test_publisher.py
agent/tests/fixtures/: session_basic.jsonl  session_with_invalid.jsonl
device/: README.md  code.py  display.py  formatting.py  lib_requirements.txt  mascot.py  moods.py  screens.py  secrets.py.example
device/sprites/: build_sprites.py
docs/: setup.md
emulator/: .env.example  .gitignore  README.md  renderer.py  requirements.txt  run.py  viewer.py
emulator/shim/: displayio.py  socketpool.py  terminalio.py  wifi.py
emulator/shim/adafruit_display_text/: __init__.py  label.py
emulator/shim/adafruit_matrixportal/: matrix.py
emulator/shim/adafruit_minimqtt/: __init__.py  adafruit_minimqtt.py
emulator/snapshots/: active_session.json  sweating.json
emulator/tests/: smoke.py
