[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-portal-agent"
version = "0.1.0"
description = "Parse and publish Claude Code usage metrics to Adafruit IO."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["claude_portal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
